# fzdbot

./: .gitignore  README.md  bot.py.bak  bot.py.old  fzd_db.bak  pyproject.toml  responses.py.bak
fzdbot/: bot.py  formatters.py  fzd_db.py
fzdbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fzdbot/command_cogs/: events_users_handling.py  scoring.py  show_scoreboard.py
fzdbot/views/: confirm_delete.py
